--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -8,6 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <Button
+        android:id="@+id/buttonStartTracking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start śledzenia"
+        android:layout_alignParentTop="true"
+        android:layout_margin="16dp"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:id="@+id/stopButton"
@@ -17,5 +25,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp" />
+
 
 </RelativeLayout>
