--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,36 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@color/white">
 
     <TextView
-        android:id="@+id/textTitle"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Menu Główne"
+        android:text="@string/menu_main"
         android:textSize="24sp"
-        android:layout_marginBottom="32dp" />
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginBottom="32dp"/>
 
-    <Button
-        android:id="@+id/buttonOpenMap"
+    <!--Nowa Trasa -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/layoutNewRoute"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Otwórz Mapę"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginHorizontal="16dp"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="16dp"
+        app:cardUseCompatPadding="true"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:background="@color/background">
 
-    <Button
-        android:id="@+id/buttonHistory"
+        <LinearLayout
+            android:id="@+id/cardNewRoute"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="12dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_new_route"
+                android:contentDescription="@string/new_route"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/new_route"
+                android:textSize="18sp"
+                android:layout_marginStart="12dp"/>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+    <!--Historia tras -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/layoutHistory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Historia Tras"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginHorizontal="16dp"
 
-    <Button
-        android:id="@+id/buttonSettings"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="16dp"
+        app:cardUseCompatPadding="true"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:background="@color/background">
+
+        <LinearLayout
+            android:id="@+id/cardHistory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="12dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_history"
+                android:contentDescription="@string/history"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/history"
+                android:textSize="18sp"
+                android:layout_marginStart="12dp"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <!--Ustawienia -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/layoutSettings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ustawienia" />
+        android:layout_marginHorizontal="16dp"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="16dp"
+        app:cardUseCompatPadding="true"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:background="@color/background">
+
+        <LinearLayout
+            android:id="@+id/cardSettings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="12dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_settings"
+                android:contentDescription="@string/settings"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings"
+                android:textSize="18sp"
+                android:layout_marginStart="12dp"/>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
 </LinearLayout>
