--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,13 +8,19 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="red">#FF0000</color>
-    <color name="green">#00FF00</color>
+    <color name="green">#4CAF50</color>
+    <color name="red">#F44336</color>
 
     <color name="background">#F5F5F5</color>
     <color name="primary_text">#212121</color>
 
-
     <color name="card_background">#FFFFFF</color>
     <color name="primary">#6200EE</color>
+
+    <color name="default_button_color">#FFFFFF</color>
+
+
+    <color name="green_transparent">#CC4CAF50</color>
+    <color name="red_transparent">#CCF44336</color>
+
 </resources>
