--- a/app/src/main/res/drawable/ic_history.xml
+++ b/app/src/main/res/drawable/ic_history.xml
@@ -1,13 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="800dp"
-    android:height="800dp"
-    android:viewportWidth="120"
-    android:viewportHeight="120">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
   <path
-      android:pathData="M0,0h120v120h-120z"
-      android:fillColor="#EFF1F3"/>
-  <path
-      android:pathData="M33.25,38.48C33.26,37.05 34.42,35.89 35.85,35.88H83.15C84.58,35.88 85.75,37.04 85.75,38.48V80.52C85.74,81.95 84.58,83.11 83.15,83.13H35.85C34.42,83.12 33.25,81.96 33.25,80.52V38.48ZM80.5,41.13H38.5V77.88L62.89,53.48C63.92,52.45 65.58,52.45 66.6,53.48L80.5,67.4V41.13ZM43.75,51.62C43.75,54.52 46.1,56.87 49,56.87C51.9,56.87 54.25,54.52 54.25,51.62C54.25,48.73 51.9,46.37 49,46.37C46.1,46.37 43.75,48.73 43.75,51.62Z"
-      android:fillColor="#687787"
-      android:fillType="evenOdd"/>
+      android:pathData="M320,680q17,0 28.5,-11.5T360,640q0,-17 -11.5,-28.5T320,600q-17,0 -28.5,11.5T280,640q0,17 11.5,28.5T320,680ZM320,520q17,0 28.5,-11.5T360,480q0,-17 -11.5,-28.5T320,440q-17,0 -28.5,11.5T280,480q0,17 11.5,28.5T320,520ZM320,360q17,0 28.5,-11.5T360,320q0,-17 -11.5,-28.5T320,280q-17,0 -28.5,11.5T280,320q0,17 11.5,28.5T320,360ZM440,680h240v-80L440,600v80ZM440,520h240v-80L440,440v80ZM440,360h240v-80L440,280v80ZM200,840q-33,0 -56.5,-23.5T120,760v-560q0,-33 23.5,-56.5T200,120h560q33,0 56.5,23.5T840,200v560q0,33 -23.5,56.5T760,840L200,840ZM200,760h560v-560L200,200v560ZM200,200v560,-560Z"
+      android:fillColor="#e8eaed"/>
 </vector>
