--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,14 +6,16 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/history"
         android:textSize="24sp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:textColor="@color/primary_text"/>
 
-    <!-- Przycisk powrotu-->
+    <!-- Przycisk powrotu -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardBack"
         android:layout_width="match_parent"
@@ -25,7 +27,7 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         android:foreground="?android:attr/selectableItemBackground"
-        android:background="@color/background">
+        android:backgroundTint="@color/card_background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,18 +40,23 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_back"
-                android:contentDescription="@string/back"/>
+                android:contentDescription="@string/back"
+/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/back"
                 android:textSize="18sp"
-                android:layout_marginStart="12dp"/>
+                android:layout_marginStart="12dp"
+                android:textColor="@color/primary_text"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <!-- Lista tras -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/background" />
 </LinearLayout>
