--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    android:background="@color/white">
+    android:background="@color/background">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         android:foreground="?android:attr/selectableItemBackground"
-        android:background="@color/background">
+        android:backgroundTint="@color/card_background">
 
         <LinearLayout
             android:id="@+id/cardNewRoute"
@@ -64,7 +64,8 @@
             android:orientation="horizontal"
             android:padding="12dp"
             android:gravity="center_vertical"
-            tools:ignore="UseCompoundDrawables">
+            tools:ignore="UseCompoundDrawables"
+            >
 
             <ImageView
                 android:layout_width="40dp"
@@ -96,7 +97,7 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         android:foreground="?android:attr/selectableItemBackground"
-        android:background="@color/background">
+        android:backgroundTint="@color/card_background">
 
         <LinearLayout
             android:id="@+id/cardHistory"
@@ -105,7 +106,9 @@
             android:orientation="horizontal"
             android:padding="12dp"
             android:gravity="center_vertical"
-            tools:ignore="UseCompoundDrawables">
+            tools:ignore="UseCompoundDrawables"
+            android:backgroundTint="@color/card_background">
+
 
             <ImageView
                 android:layout_width="40dp"
@@ -134,7 +137,7 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         android:foreground="?android:attr/selectableItemBackground"
-        android:background="@color/background">
+        android:backgroundTint="@color/card_background">
 
         <LinearLayout
             android:id="@+id/cardSettings"
