--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -25,7 +25,8 @@
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
         android:layout_marginBottom="12dp"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        android:backgroundTint="@color/card_background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -123,7 +124,8 @@
             android:layout_marginEnd="4dp"
             app:cardCornerRadius="12dp"
             app:cardElevation="4dp"
-            app:cardUseCompatPadding="true">
+            app:cardUseCompatPadding="true"
+            android:backgroundTint="@color/card_background">>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -159,7 +161,7 @@
             app:cardCornerRadius="12dp"
             app:cardElevation="4dp"
             app:cardUseCompatPadding="true"
-            android:backgroundTint="@color/default_button_color">
+            android:backgroundTint="@color/card_background">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -167,7 +169,7 @@
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="16dp"
-                android:background="@color/default_button_color">
+                android:background="@color/card_background">
 
                 <ImageView
                     android:layout_width="40dp"
@@ -195,7 +197,8 @@
         android:layout_marginTop="12dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        android:backgroundTint="@color/card_background">
 
         <LinearLayout
             android:layout_width="match_parent"
